loggerapp/datalogger/driver/vrmagic/vrmusbcam2.h


// ------------------------------------------------------------------------
/// @defgroup Types                                             Basic Types
// ------------------------------------------------------------------------
/// @{

typedef unsigned char VRmBYTE;

typedef unsigned int VRmDWORD;

typedef unsigned int VRmBOOL;

typedef const char* VRmSTRING;


/// "rect" type (int)
typedef VRM_STRUCT _VRmRectI {
	int m_left;
	int m_top;
	int m_width;
	int m_height;
} VRmRectI;


/// @}
// ------------------------------------------------------------------------
/// @defgroup General                   Error Handling / General Management
// ------------------------------------------------------------------------
/// @{

/// return value values of API function calls
typedef VRM_ENUM _VRmRetVal
{
	/// return value for failed function call
	VRM_FAILED=0,
	/// return value for successful function call
	VRM_SUCCESS=1
} VRmRetVal;
typedef struct VRmUsbCamDeviceInternal* VRmUsbCamDevice;

/// struct to identify devices.
/// device key is a unique combination of serial, manufacturer
/// and product string
/// NOTE: the strings within this struct are only guaranteed to be valid
/// until the next call to VRmUsbCamUpdateDeviceKeyList()!
typedef VRM_STRUCT _VRmDeviceKey
{
	/// serial number
	VRmDWORD m_serial;
	/// manufacturer name string
	VRmSTRING mp_manufacturer_str;
	/// product name string
	VRmSTRING mp_product_str;
	/// busy means the device is already used by another application
	VRmBOOL m_busy;
	/// private = additional internal data
	void* mp_private;
}VRmDeviceKey;


/// get device key for device in use.
/// use VRmUsbCamFreeDeviceKey() to free the key when you're done
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetDeviceKey(VRmUsbCamDevice f_device, VRmDeviceKey** fpp_device_key);


/// close device using device handle
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamCloseDevice(VRmUsbCamDevice f_device);



/// @}
// ------------------------------------------------------------------------
/// @defgroup UDS                   User Data Storage / Non-Volatile Memory
// ------------------------------------------------------------------------
/// @{

/// struct for user data storage
typedef VRM_STRUCT _VRmUserData
{
	/// length of user data in bytes
	VRmDWORD m_length;
	/// pointer to user data
	VRmBYTE* mp_data;
	/// private = additional internal data
	void* mp_private;
}VRmUserData;


/// load user data from eeprom.
/// use VRmUsbCamFreeUserData() to delete afterwards. if no data was saved before this function
/// returns without error but returns a VRmUserData with length = 0
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamLoadUserData(VRmUsbCamDevice f_device, VRmUserData** fpp_user_data);


/// save user data in eeprom.
/// NOTE: you can use the VRM_PROPID_DEVICE_NV_MEM_FREE_I property to determine the number of
/// bytes free in the non-volatile memory of the device
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSaveUserData(VRmUsbCamDevice f_device, const VRmUserData* fcp_user_data);


/// allocate new user data.
/// length in bytes, use VRmUsbCamFreeUserData() to delete
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamNewUserData(VRmUserData** fpp_user_data, VRmDWORD f_length);


/// free VRmUserData created by VRmUsbCamNewUserData() and VRmUsbCamLoadUserData()
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamFreeUserData(VRmUserData** fpp_user_data);


/// @}
// ------------------------------------------------------------------------
/// @defgroup Timer                                                   Timer
// ------------------------------------------------------------------------
/// @{

/// restart timer for timestamps, use for all open devices
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamRestartTimer(void);


/// get current timestamp from timer
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetCurrentTime(double* fp_current_time);


/// @}
// ------------------------------------------------------------------------
/// @defgroup Images                                         Image Handling
// ------------------------------------------------------------------------
/// @{

/// enum for color formats
typedef VRM_ENUM _VRmColorFormat
{
	/// 32bit Pixel, Order A R G B using 32bit (DWORD) access
	VRM_ARGB_4X8,
	/// 24bit Pixel, Order B G R using 8bit (BYTE) access
	VRM_BGR_3X8,
	/// 16bit Pixel, Order R(5) G(6) B(5) using 16bit (WORD) access
	VRM_RGB_565,
	/// (effective) 16bit Pixel, Order Y U Y V, U+V = color for 2 pixels
	VRM_YUYV_4X8,
	/// 8bit Pixel
	VRM_GRAY_8,
	/// 8bit Pixel, Order G B (even lines) R G (odd lines)
	VRM_BAYER_GBRG_8,
	/// 8bit Pixel, Order B G (even lines) G R (odd lines)
	VRM_BAYER_BGGR_8,
	/// 8bit Pixel, Order R G (even lines) G B (odd lines)
	VRM_BAYER_RGGB_8,
	/// 8bit Pixel, Order G R (even lines) B G (odd lines)
	VRM_BAYER_GRBG_8,
	/// 10bit Pixel, storing upper 8bit in first byte, storing lower 2bit in second byte (lowest bits)
	VRM_GRAY_10,
	/// 10bit Pixel, Order G B (even lines) R G (odd lines)
	VRM_BAYER_GBRG_10,
	/// 10bit Pixel, Order B G (even lines) G R (odd lines)
	VRM_BAYER_BGGR_10,
	/// 10bit Pixel, Order R G (even lines) G B (odd lines)
	VRM_BAYER_RGGB_10,
	/// 10bit Pixel, Order G R (even lines) B G (odd lines)
	VRM_BAYER_GRBG_10,
	/// 16bit Pixel, using 16bit (WORD) access
	VRM_GRAY_16,
	/// 48bit Pixel, using 16bit (WORD) access
	VRM_BGR_3X16,
	/// 16bit Pixel, Order G B (even lines) R G (odd lines)
	VRM_BAYER_GBRG_16,
	/// 16bit Pixel, Order B G (even lines) G R (odd lines)
	VRM_BAYER_BGGR_16,
	/// 16bit Pixel, Order G R (even lines) B G (odd lines)
	VRM_BAYER_RGGB_16,
	/// 16bit Pixel, Order R G (even lines) G B (odd lines)
	VRM_BAYER_GRBG_16,
	/// (effective) 16bit Pixel, Order U Y V Y, U+V = color for 2 pixels
	VRM_UYVY_4X8
}VRmColorFormat;


/// enum for image modifiers
typedef VRM_ENUM _VRmImageModifier
{
	/// standard image, top->down, left->right orientation
	VRM_STANDARD=0,
	/// vertical mirrored
	VRM_VERTICAL_MIRRORED=1<<0,
	/// horizontal mirrored
	VRM_HORIZONTAL_MIRRORED=1<<1,
	/// first field of interlaced image
	VRM_INTERLACED_FIELD0=1<<2,
	/// second field of interlaced image
	VRM_INTERLACED_FIELD1=1<<3,
	/// any field of interlaced image (this is only used for format selection)
	VRM_INTERLACED_FIELD01=1<<4,
	///  both fields of interlaced image (one field below the other)
	/// is always combined with either VRM_ORDER_TFF or VRM_ORDER_BFF
	/// this can be deinterlaced to one frame (see VRmUsbCamConvertImage)
	VRM_INTERLACED_FRAME=1<<5,
	/// associated LUT has 1 channel, 8bit indices
	VRM_CORRECTION_LUT_1CHANNEL_8=1<<6,
	/// associated LUT has 1 channel, 10bit indices
	VRM_CORRECTION_LUT_1CHANNEL_10=1<<7,
	/// associated LUT has 4 channels, 8bit indices
	VRM_CORRECTION_LUT_4CHANNEL_8=1<<8,
	/// associated LUT has 4 channels, 10bit indices
	VRM_CORRECTION_LUT_4CHANNEL_10=1<<9,
	/// this format has a changeable ROI (User ROI)
	VRM_USER_ROI=1<<10,
	/// subsampled image (skipped pixels or binning)
	VRM_SUBSAMPLED=1<<11,
	/// Run Length Encoded (supports VRM_GRAY_8, VRM_BGR_3X8).
	/// byte pairs (value, length), EOF marked by length=0.
	VRM_RUN_LENGTH_ENCODED=1<<12,
	/// the data in this image is A-LAW compressed
	/// (currently Davinci DSP images only)
	VRM_ALAW_COMPRESSED=1<<13,
	/// TFF (top field first)
	/// upper half image is the first field, lower half image is the second field
	VRM_ORDER_TFF = 1<<14,
	/// BFF (bottom field first)
	/// upper half image is the second field, lower half image is the first field
	VRM_ORDER_BFF = 1<<15,
	/// associated LUT has 1 channel, 16 bit indices, 16 bit data
	VRM_CORRECTION_LUT_1CHANNEL_16=1<<16

}VRmImageModifier;


/// struct for image format
typedef VRM_STRUCT _VRmImageFormat
{
	/// width in pixels
	VRmDWORD m_width;
	/// height in lines
	VRmDWORD m_height;
	/// color format enum
	VRmColorFormat m_color_format;
	/// bit combination of enum VRmImageModifier values
	int m_image_modifier;
}VRmImageFormat;


/// struct for image container
typedef VRM_STRUCT _VRmImage
{
	/// image format struct
	VRmImageFormat m_image_format;
	/// pointer to image buffer
	VRmBYTE* mp_buffer;
	/// pitch = number of bytes from (x, y) to (x, y+1)
	VRmDWORD m_pitch;
	/// timestamp of image in ms since last VRmUsbCamRestartTimer()
	double m_time_stamp;
	/// private = additional internal data
	void* mp_private;
}VRmImage;


/// create new image with given image format.
/// NOTE: free image using VRmUsbCamFreeImage().
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamNewImage(VRmImage** fpp_image, VRmImageFormat f_image_format);


/// create new image as copy of src_image.
/// NOTE: free image using VRmUsbCamFreeImage().
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamCopyImage(VRmImage** fpp_image, const VRmImage* fcp_src_image);


/// get cropped Part of an Image without copying of image data.
/// NOTE: image data is shared with given image.
/// NOTE: free image using VRmUsbCamFreeImage().
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamCropImage(VRmImage** fpp_image, const VRmImage* fcp_src_image, const VRmRectI* fcp_roi);


/// create image container with given format, buffer and pitch.
/// NOTE: free image using VRmUsbCamFreeImage() but you still have to deallocate fp_buffer YOURSELF!
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSetImage(VRmImage** fpp_image, VRmImageFormat f_image_format, VRmBYTE* fp_buffer, VRmDWORD f_pitch);


/// create image container with given format, buffer, pitch and buffer size.
/// use this function to create images from RLE or BAYER images
/// NOTE: free image using VRmUsbCamFreeImage() but you still have to deallocate fp_buffer YOURSELF!
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSetImageEx(VRmImage** fpp_image, VRmImageFormat f_image_format, VRmBYTE* fp_buffer, VRmDWORD f_pitch, VRmDWORD f_buffer_size);


/// get Frame Counter of Image
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetFrameCounter(const VRmImage* fcp_image, VRmDWORD* fp_frame_counter);