loggerapp/datalogger/driver/vrmagic/vrmusbcamapi.py


# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 275
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetDeviceKey'):
    VRmUsbCamGetDeviceKey = _libs['libvrmusbcam2.so'].VRmUsbCamGetDeviceKey
    VRmUsbCamGetDeviceKey.argtypes = [
        VRmUsbCamDevice, POINTER(POINTER(VRmDeviceKey))
    ]
    VRmUsbCamGetDeviceKey.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 278
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamCloseDevice'):
    VRmUsbCamCloseDevice = _libs['libvrmusbcam2.so'].VRmUsbCamCloseDevice
    VRmUsbCamCloseDevice.argtypes = [VRmUsbCamDevice]
    VRmUsbCamCloseDevice.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 296


class struct__VRmUserData(Structure):
    pass


struct__VRmUserData.__slots__ = [
    'm_length',
    'mp_data',
    'mp_private',
]
struct__VRmUserData._fields_ = [
    ('m_length', VRmDWORD),
    ('mp_data', POINTER(VRmBYTE)),
    ('mp_private', POINTER(None)),
]

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 296
VRmUserData = struct__VRmUserData

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 301
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamLoadUserData'):
    VRmUsbCamLoadUserData = _libs['libvrmusbcam2.so'].VRmUsbCamLoadUserData
    VRmUsbCamLoadUserData.argtypes = [
        VRmUsbCamDevice, POINTER(POINTER(VRmUserData))
    ]
    VRmUsbCamLoadUserData.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 306
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSaveUserData'):
    VRmUsbCamSaveUserData = _libs['libvrmusbcam2.so'].VRmUsbCamSaveUserData
    VRmUsbCamSaveUserData.argtypes = [VRmUsbCamDevice, POINTER(VRmUserData)]
    VRmUsbCamSaveUserData.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 310
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamNewUserData'):
    VRmUsbCamNewUserData = _libs['libvrmusbcam2.so'].VRmUsbCamNewUserData
    VRmUsbCamNewUserData.argtypes = [POINTER(POINTER(VRmUserData)), VRmDWORD]
    VRmUsbCamNewUserData.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 313
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamFreeUserData'):
    VRmUsbCamFreeUserData = _libs['libvrmusbcam2.so'].VRmUsbCamFreeUserData
    VRmUsbCamFreeUserData.argtypes = [POINTER(POINTER(VRmUserData))]
    VRmUsbCamFreeUserData.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 322
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamRestartTimer'):
    VRmUsbCamRestartTimer = _libs['libvrmusbcam2.so'].VRmUsbCamRestartTimer
    VRmUsbCamRestartTimer.argtypes = []
    VRmUsbCamRestartTimer.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 325
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetCurrentTime'):
    VRmUsbCamGetCurrentTime = _libs['libvrmusbcam2.so'].VRmUsbCamGetCurrentTime
    VRmUsbCamGetCurrentTime.argtypes = [POINTER(c_double)]
    VRmUsbCamGetCurrentTime.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 378
enum__VRmColorFormat = c_int

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 378
VRM_ARGB_4X8 = 0

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 378
VRM_BGR_3X8 = (VRM_ARGB_4X8 + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 378
VRM_RGB_565 = (VRM_BGR_3X8 + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 378
VRM_YUYV_4X8 = (VRM_RGB_565 + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 378
VRM_GRAY_8 = (VRM_YUYV_4X8 + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 378
VRM_BAYER_GBRG_8 = (VRM_GRAY_8 + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 378
VRM_BAYER_BGGR_8 = (VRM_BAYER_GBRG_8 + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 378
VRM_BAYER_RGGB_8 = (VRM_BAYER_BGGR_8 + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 378
VRM_BAYER_GRBG_8 = (VRM_BAYER_RGGB_8 + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 378
VRM_GRAY_10 = (VRM_BAYER_GRBG_8 + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 378
VRM_BAYER_GBRG_10 = (VRM_GRAY_10 + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 378
VRM_BAYER_BGGR_10 = (VRM_BAYER_GBRG_10 + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 378
VRM_BAYER_RGGB_10 = (VRM_BAYER_BGGR_10 + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 378
VRM_BAYER_GRBG_10 = (VRM_BAYER_RGGB_10 + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 378
VRM_GRAY_16 = (VRM_BAYER_GRBG_10 + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 378
VRM_BGR_3X16 = (VRM_GRAY_16 + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 378
VRM_BAYER_GBRG_16 = (VRM_BGR_3X16 + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 378
VRM_BAYER_BGGR_16 = (VRM_BAYER_GBRG_16 + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 378
VRM_BAYER_RGGB_16 = (VRM_BAYER_BGGR_16 + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 378
VRM_BAYER_GRBG_16 = (VRM_BAYER_RGGB_16 + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 378
VRM_UYVY_4X8 = (VRM_BAYER_GRBG_16 + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 378
VRmColorFormat = enum__VRmColorFormat

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 426
enum__VRmImageModifier = c_int

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 426
VRM_STANDARD = 0

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 426
VRM_VERTICAL_MIRRORED = (1 << 0)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 426
VRM_HORIZONTAL_MIRRORED = (1 << 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 426
VRM_INTERLACED_FIELD0 = (1 << 2)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 426
VRM_INTERLACED_FIELD1 = (1 << 3)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 426
VRM_INTERLACED_FIELD01 = (1 << 4)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 426
VRM_INTERLACED_FRAME = (1 << 5)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 426
VRM_CORRECTION_LUT_1CHANNEL_8 = (1 << 6)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 426
VRM_CORRECTION_LUT_1CHANNEL_10 = (1 << 7)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 426
VRM_CORRECTION_LUT_4CHANNEL_8 = (1 << 8)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 426
VRM_CORRECTION_LUT_4CHANNEL_10 = (1 << 9)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 426
VRM_USER_ROI = (1 << 10)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 426
VRM_SUBSAMPLED = (1 << 11)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 426
VRM_RUN_LENGTH_ENCODED = (1 << 12)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 426
VRM_ALAW_COMPRESSED = (1 << 13)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 426
VRM_ORDER_TFF = (1 << 14)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 426
VRM_ORDER_BFF = (1 << 15)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 426
VRM_CORRECTION_LUT_1CHANNEL_16 = (1 << 16)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 426
VRmImageModifier = enum__VRmImageModifier

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 439


class struct__VRmImageFormat(Structure):
    pass


struct__VRmImageFormat.__slots__ = [
    'm_width',
    'm_height',
    'm_color_format',
    'm_image_modifier',
]
struct__VRmImageFormat._fields_ = [
    ('m_width', VRmDWORD),
    ('m_height', VRmDWORD),
    ('m_color_format', VRmColorFormat),
    ('m_image_modifier', c_int),
]

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 439
VRmImageFormat = struct__VRmImageFormat

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 454


class struct__VRmImage(Structure):
    pass


struct__VRmImage.__slots__ = [
    'm_image_format',
    'mp_buffer',
    'm_pitch',
    'm_time_stamp',
    'mp_private',
]
struct__VRmImage._fields_ = [
    ('m_image_format', VRmImageFormat),
    ('mp_buffer', POINTER(VRmBYTE)),
    ('m_pitch', VRmDWORD),
    ('m_time_stamp', c_double),
    ('mp_private', POINTER(None)),
]

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 454
VRmImage = struct__VRmImage

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 458
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamNewImage'):
    VRmUsbCamNewImage = _libs['libvrmusbcam2.so'].VRmUsbCamNewImage
    VRmUsbCamNewImage.argtypes = [POINTER(POINTER(VRmImage)), VRmImageFormat]
    VRmUsbCamNewImage.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 462
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamCopyImage'):
    VRmUsbCamCopyImage = _libs['libvrmusbcam2.so'].VRmUsbCamCopyImage
    VRmUsbCamCopyImage.argtypes = [
        POINTER(POINTER(VRmImage)), POINTER(VRmImage)
    ]
    VRmUsbCamCopyImage.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 467
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamCropImage'):
    VRmUsbCamCropImage = _libs['libvrmusbcam2.so'].VRmUsbCamCropImage
    VRmUsbCamCropImage.argtypes = [
        POINTER(POINTER(VRmImage)), POINTER(VRmImage), POINTER(VRmRectI)
    ]
    VRmUsbCamCropImage.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 471
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSetImage'):
    VRmUsbCamSetImage = _libs['libvrmusbcam2.so'].VRmUsbCamSetImage
    VRmUsbCamSetImage.argtypes = [
        POINTER(POINTER(VRmImage)), VRmImageFormat, POINTER(VRmBYTE), VRmDWORD
    ]
    VRmUsbCamSetImage.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 476
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSetImageEx'):
    VRmUsbCamSetImageEx = _libs['libvrmusbcam2.so'].VRmUsbCamSetImageEx
    VRmUsbCamSetImageEx.argtypes = [POINTER(POINTER(VRmImage)), VRmImageFormat,
                                    POINTER(VRmBYTE), VRmDWORD, VRmDWORD]
    VRmUsbCamSetImageEx.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 479
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetFrameCounter'):
    VRmUsbCamGetFrameCounter = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetFrameCounter
    VRmUsbCamGetFrameCounter.argtypes = [POINTER(VRmImage), POINTER(VRmDWORD)]
    VRmUsbCamGetFrameCounter.restype = VRmRetVal
